--- a/app/partials/modal.html
+++ b/app/partials/modal.html
@@ -8,7 +8,7 @@
     <p><div ng-show="paper.thumbnail"><a href="http://dx.doi.org/{{paper.doi}}" target="_blank"><img alt="{{paper.title}}" title="{{paper.title}}" class="pull-right paper-image" ng-src="papers/{{paper.thumbnail}}" /></a></div>
     <blockquote class="paper-abstract">{{paper.abstract}}</blockquote></p>
 
-<strong>Reference:</strong> <em>VizSec {{paper.year}} - DOI: <a href="http://dx.doi.org/{{paper.doi}}" target="_blank">{{paper.doi}}</a></em>
+<strong>Reference:</strong> <em>{{paper.conference}} - DOI: <a href="http://dx.doi.org/{{paper.doi}}" target="_blank">{{paper.doi}}</a></em>
 </div>
 <div class="modal-footer">
     <a type="button" href="http://dx.doi.org/{{paper.doi}}" target="_blank" class="btn btn-danger">Visit Publisher Website</a>
